...
            viewModel.updateLastQuery(query)
        }
    }
    SearchBar(
        modifier = Modifier
            .fillMaxWidth()
            .testTag("BookSearch")
            .height(50.dp),
        inputField = {
            SearchBarDefaults.InputField(
                modifier = Modifier.testTag("BooksSearchInputField"),
                query = query,
                onQueryChange = { newQuery ->
                    query = newQuery
                },
                onSearch = {
                    active = false
...
