<resources>
    <string name="app_name">BookApp</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>


    <string name="description">Description</string>
    <string name="search">Search</string>

    <string name="settings">Settings</string>
    <string name="app_theme">App theme</string>

    <string name="published">Published</string>
    <string name="publisher">Publisher</string>
    <string name="pages">Pages</string>
    <string name="read_preview">Read Preview</string>

    <string name="edit_profile">Edit Profile</string>

    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>



    <!-- ifNull -->
    <string name="null_description">No description for this title</string>
    <string name="movie_etails_not_available">Movie details not available</string>
    <string name="there_are_no_favorites">There are no favorites</string>
    <string name="movies_not_found">Movies not found</string>

    <!-- Error -->
    <string name="error">Error</string>
    <string name="repeat">Repeat</string>

    <string name="light_theme">Светлая тема</string>
    <string name="dark_theme">Темная тема</string>
    <string name="app_language">Язык приложения</string>
    <string name="english">Английский</string>
    <string name="russian">Русский</string>
    <string name="selected">Выбрано</string>
</resources>