...
            )

            Spacer(modifier = Modifier.width(16.dp))

            Column {
                Text(
                    modifier = Modifier.testTag("BookTitle"),
                    text = book.title,
                    style = MaterialTheme.typography.headlineSmall
                )
                Text(
                    text = book.authors.joinToString(),
                    style = MaterialTheme.typography.bodyMedium,
...
        // Описание книги
        Text(
            text = stringResource(R.string.description),
            style = MaterialTheme.typography.titleMedium
        )
        Text(
            modifier = Modifier.testTag("BookDescription"),
            text = book.description ?: stringResource(R.string.null_description),
            style = MaterialTheme.typography.bodyMedium
        )


        HorizontalDivider()
...
