...
                TopBarTitle()
            }
        },
        navigationIcon = {
            if (showBackButton) {
                IconButton(
                    modifier = Modifier.testTag("backBtn"),
                    onClick = { navController.popBackStack() }
                ) {
                    Icon(
                        imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                        contentDescription = "backButton"
                    )
...
